# python-study60

./: README.md  pyproject.toml
src/: main.py
src/modules/: wordcloud.py
src/modules/mydataclass/: morph.py  xbrl.py
src/modules/parser/: business_issues_parser.py  company_name_parser.py  parser.py
